@@ -1,7 +1,7 @@
 ;--------------------------------------------------------------------------
 ;  div.s
 ;
-;  Copyright (C) 2000, Michael Hope
+;  Copyright (C) 2000-2010, Michael Hope, Philipp Klaus Krause, Marco Bodrato
 ;
 ;  This library is free software; you can redistribute it and/or modify it
 ;  under the terms of the GNU General Public License as published by the
@@ -40,149 +40,6 @@ __divuint_rrx_s::
 
         jr      __divu16
 
-__divsuchar_rrx_s::
-        ld      hl,#2+1
-        add     hl,sp
-
-        ld      e,(hl)
-        dec     hl
-        ld      l,(hl)
-        ld      h,#0
-
-        jr      signexte
-
-__modsuchar_rrx_s::
-        ld      hl,#2+1
-        add     hl,sp
-
-        ld      e,(hl)
-        dec     hl
-        ld      l,(hl)
-        ld      h,#0
-
-        call    signexte
-
-        ex      de,hl
-        ret
-
-__divuschar_rrx_s::
-        ld      hl,#2+1
-        ld      d, h
-        add     hl,sp
-
-        ld      e,(hl)
-        dec     hl
-        ld      l,(hl)
-
-        ld      a,l             ; Sign extend
-        rlca
-        sbc     a
-        ld      h,a
-
-        jr      __div16
-
-__divschar_rrx_s::
-        ld      hl,#2+1
-        add     hl,sp
-
-        ld      e,(hl)
-        dec     hl
-        ld      l,(hl)
-
-        ;; Fall through
-__divschar_rrx_hds::
-__div8::
-        ld      a,l             ; Sign extend
-        rlca
-        sbc     a
-        ld      h,a
-signexte:
-        ld      a,e             ; Sign extend
-        rlca
-        sbc     a
-        ld      d,a
-        ; Fall through to __div16
-
-        ;; signed 16-bit division
-        ;;
-        ;; Entry conditions
-        ;;   HL = dividend
-        ;;   DE = divisor
-        ;;
-        ;; Exit conditions
-        ;;   HL = quotient
-        ;;   DE = remainder
-        ;;   If divisor is non-zero, carry=0
-        ;;   If divisor is 0, carry=1 and both quotient and remainder are 0
-        ;;
-        ;; Register used: AF,B,DE,HL
-__divsint_rrx_hds::
-__div16::
-        ;; Determine sign of quotient by xor-ing high bytes of dividend
-        ;;  and divisor. Quotient is positive if signs are the same, negative
-        ;;  if signs are different
-        ;; Remainder has same sign as dividend
-        ld      a,h             ; Get high byte of dividend
-        xor     d               ; Xor with high byte of divisor
-        rla                     ; Sign of quotient goes into the carry
-        ld      a,h             ; Get high byte of dividend
-        push    af              ; Save sign of both quotient and reminder
-
-        ;; Take absolute value of dividend
-        rla
-        jr      NC,.chkde       ; Jump if dividend is positive
-        sub     a               ; Substract dividend from 0
-        sub     l
-        ld      l,a
-        sbc     a               ; Propagate borrow (A=0xFF if borrow)
-        sub     h
-        ld      h,a
-        ;; Take absolute value of divisor
-.chkde:
-        bit     7,d
-        jr      Z,.dodiv        ; Jump if divisor is positive
-        sub     a               ; Substract divisor from 0
-        sub     e
-        ld      e,a
-        sbc     a               ; Propagate borrow (A=0xFF if borrow)
-        sub     d
-        ld      d,a
-        ;; Divide absolute values
-.dodiv:
-        call    __divu16
-        jr      C,.exit         ; Exit if divide by zero
-        ;; Negate quotient if it is negative
-        pop     af              ; recover sign of quotient
-        jr      NC,.dorem       ; Jump if quotient is positive
-        ld      b,a
-        sub     a               ; Substract quotient from 0
-        sub     l
-        ld      l,a
-        sbc     a               ; Propagate borrow (A=0xFF if borrow)
-        sub     h
-        ld      h,a
-        ld      a,b
-.dorem:
-        ;; Negate remainder if it is negative
-        rla
-        ret     NC              ; Return if remainder is positive
-        sub     a               ; Substract remainder from 0
-        sub     e
-        ld      e,a
-        sbc     a               ; Propagate remainder (A=0xFF if borrow)
-        sub     d
-        ld      d,a
-        ret
-.exit:
-        pop     af
-
-.dividebyzero:
-        ld      h,d             ; Divide by zero error: D=E=0
-        ld      l,e
-        scf                     ; Set carry, invalid result
-        ret
-
-        ;; Unsigned
 __divuchar_rrx_s::
         ld      hl,#2+1
         add     hl,sp
@@ -196,10 +53,9 @@ __divuchar_rrx_hds::
 __divu8::
         ld      h,#0x00
         ld      d,h
-        ; Fall through to divu16
+        ; Fall through to __divu16
 
         ;; unsigned 16-bit division
-        ;; Restructured on April 2009 by Marco Bodrato(http://bodrato.it/ )
         ;;
         ;; Entry conditions
         ;;   HL = dividend
@@ -217,7 +73,6 @@ __divu16::
         ;; Check for division by zero
         ld      a,e
         or      d
-        jr      Z,.dividebyzero ; Branch if divisor is non-zero
         ;; Two algorithms: one assumes divisor <2^7, the second
         ;; assumes divisor >=2^7; choose the applicable one.
         and     #0x80
@@ -227,7 +82,6 @@ __divu16::
         ;; Both algorithms "rotate" 24 bits (H,L,A) but roles change.
 
         ;; unsigned 16/7-bit division
-        ;; Rewrote on April 2009 by Marco Bodrato ( http://bodrato.it/ )
 .atmost7bits:
         ld      b,#16           ; bits in dividend and possible quotient
         ;; Carry cleared by AND/OR, this "0" bit will pass trough HL.[*]
@@ -262,7 +116,6 @@ __divu16::
         ld      h,#0
         rr      l               ;  undoing 1
 .dvloop:
-        ;; Cleaned up on April 2009 by Marco Bodrato(http://bodrato.it/ )
         ;; Shift next bit of quotient into bit 0 of dividend
         ;; Shift next MSB of dividend into LSB of remainder
         ;; A holds both dividend and quotient. While we shift a bit from
